--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,7 @@ sudo: false
 php:
   - 7.2
   - nightly
+before_install:
+  - composer global require "squizlabs/php_codesniffer=3.*"
 script:
   - phpcs -p --standard="PSR2" src
